Make Search Input work and Fix Splash Navbar Visibility

--- a/app/assets/stylesheets/globals.css.scss
+++ b/app/assets/stylesheets/globals.css.scss
@@ -172,12 +172,12 @@ li:hover.inner-page-logo {
 }
 
 .inner-page-nav #search  {
-   position:relative;
-   top:18px;
-   background:#fff;
-   padding-top:18px;
-   padding-bottom:18px;
-   border: none;
+  position: relative;
+  top: 5px;
+  background: none repeat scroll 0% 0% rgb(255, 255, 255);
+  margin-top: 18px;
+  margin-bottom: 18px;
+  border: medium none;
 }
 
 #user-search-submit {
