--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -20,7 +20,6 @@
   background-image: url("soonmine-bg.jpg");
   background-repeat:no-repeat;
   background-size: 100%;
-  background-position:center center;
   background-size: cover;
   color: white;
 }
